--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
@@ -50,6 +52,11 @@ dependencies {
 
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+
+
+    // dependency injection
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 
     testImplementation 'junit:junit:4.13.2'
