--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ buildscript {
 
     ext {
         hilt_version = "2.43.2"
+        nav_version = "2.5.1"
     }
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
